syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/sahmad/trip-grpc-go/api/proto;apiv1";

message CreateTripRequest {
  string name = 1;
  uint64 member_id = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}