syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/sahmad/trip-grpc-go/api/proto;apiv1";

message CreateTripResponse {
  uint64 id = 1;
  string name = 2;
  uint64 member_id = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
}